--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,7 +10,7 @@ jobs:
           run: echo "Fist GitHub Action Job"
 
         - name: Checkout
-          uses: uses: actions/checkout@v6
+          uses: actions/checkout@v6
 
         - name: List files
           run: ls
