--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,11 +10,13 @@ jobs:
           uses: actions/checkout@v6
 
         - name: Welcome message
-          run: echo "Fist GitHub Action Job"
-
-        - name: List files
-          run: ls
-
-        - name: Read file
-          run: cat README.md
+          run: |
+            echo "Fist GitHub Action Job"
+            ls -ltra
+            cat README.md
             
+      #  - name: List files
+      #   run: ls
+      #
+      # - name: Read file
+      #   run: cat README.md
