--- a/.github/workflows/ascii.yml
+++ b/.github/workflows/ascii.yml
@@ -16,7 +16,9 @@ jobs:
               run: ls -ltra
 
             - name: Running Shell Script
-              run: ./myscript.sh
+              run: | 
+               chmod +x myscript.sh 
+               ./myscript.sh
             
             #- name: Run Cowsay Command
             #  run: cowsay -f dragon "I am a Dragon, FIRE!!!!!!" >> dragon.txt
