--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -25,7 +25,7 @@ jobs:
     needs: docker
     concurrency:
         group: prod-deployment
-        cancel-in-progress: true
+        cancel-in-progress: false
     steps:
     - name: Docker run
       run: |
