--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -2,7 +2,7 @@ name: Concurrency
 
 on: workflow_dispatch
 
-env: 
+env:
   CONTAINER_REGISTRY: docker.io
   DOCKER_USERNAME: beheman77
   IMAGE_NAME: mynginx-heman:v1
@@ -12,22 +12,44 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-    - name: Docker build
-      run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+      - name: Docker build
+        run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
-    - name: Docker login
-      env: 
-        DOCKER_PASSWORD: securepassword123
-      run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+      - name: Docker login
+        env:
+          DOCKER_PASSWORD: securepassword123
+        run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
 
   deploy:
     runs-on: ubuntu-latest
     needs: docker
     concurrency:
-        group: prod-deployment
-        cancel-in-progress: false
+      group: prod-deployment
+      cancel-in-progress: false
     steps:
-    - name: Docker run
-      run: |
-        echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
-        sleep 600s
+      - name: Docker run
+        run: |
+          echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          sleep 600s
+
+##Workflow Level CONCURRENCY Example
+# name: CI/CD Pipeline
+
+# on: push
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.ref }}
+#   cancel-in-progress: true
+
+# jobs:
+#   ...
+
+# Job Level CONCURRENCY Example
+
+# jobs:
+#   deploy-staging:
+#     runs-on: ubuntu-latest
+#     concurrency:
+#       group: staging_environment_deployment
+#       cancel-in-progress: true
+#     steps:
+#       ...
