docker run command fixed

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -29,4 +29,4 @@ jobs:
         - name: Echo docker
           run: docker info
         - name: RUn Images on ${{ matrix.OS}}
-          run: ${{ matrix.images}}
+          run: docker run ${{ matrix.images}}
